# ocr

./: readme.md
ocr/: pyproject.toml
ocr/ocr/: docker-compose.yaml  models.h5
ocr/ocr/archive/: 0.json  1.json  2.json  4.json  6.json  7.json  9.json
ocr/ocr/backend/: image_prediction.py  image_recognition.py  main.py
ocr/ocr/datasets/: 3.json  5.json  8.json  9.json  datasets.csv
ocr/ocr/frontend/: index.html  scripts.js
ocr/ocr/frontend/js/: scripts.js
ocr/ocr/frontend/res/css/: style.css
ocr/tests/: test_ocr.py
