[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Xavier Perret <xa.perret@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
mypy = "^0.812"
keras = "^2.4.3"
tensorflow = "^2.5.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
